src/objects/DSCORGPKG__MaintainOperation__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Operation_Type__c</fullName>
        <label>Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Not Complete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__parameterBody__c</fullName>
        <label>parameterBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>DiscoverOrg Maintain Operation</label>
    <listViews>
        <fullName>DSCORGPKG__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>MaintainOperation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MaintainOperations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>